PRE 1.0.4 UPDATE COMMIT : Added secrets to env variable. Fixed and changed places to some CSS content. Better Slider design. Added Feature icon. Added function to check the brightness of an image in Rust. Used image brightness to change title of categories. Added better library design. Added comments for explaining the cmp_null warning by clippy.

--- a/src/components/Updatedrepacks-01/Updatedrepacks.css
+++ b/src/components/Updatedrepacks-01/Updatedrepacks.css
@@ -1,4 +1,4 @@
-/* NEWLY ADDED GAMES, FOCUS ON THIS FIRST.*/
+/* UPDATED REPACKS, FOCUS ON THIS FIRST.*/
 
   .recently-updated {
     display: inline-grid;
@@ -6,11 +6,25 @@
     grid-area: Recently-Updated;
     gap: 2em;
     grid-auto-rows: 200px;
-    overflow-x: auto;
-    overflow-x: hidden;
+    overflow-x: visible;
     position: relative;
+    /* background-color: rgb(197 197 197 / 50%);
+    backdrop-filter: blur(10px);  */
+    padding-top: 1em;
+    padding-left: 1em;
+    padding-bottom: 1em;
+    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  */
     
 }
+
+.Recently-Updated { 
+    grid-row: 3; 
+    display: flex;
+    gap: 1em;
+    padding-left: 2em;
+    flex-direction: column; 
+} 
+
   .newly-added::-webkit-scrollbar {
     display: none; /* Hide the default scrollbar */
   }
@@ -21,8 +35,7 @@
     width: 100vw;
     gap: inherit;
   }
-  
-  /* Optional: Adjust styling for the image and title */
+
   .recently-updated img {
     grid-column: span 1;
     display: flex;
@@ -32,6 +45,12 @@
     max-height: -webkit-fill-available;
     border-radius: 18px;
     cursor: pointer;
+    box-shadow: 0px 4px 12px rgb(0 0 0 / 43%);
+    transition: transform 0.3s ease;
+  }
+
+  .recently-updated img:hover {
+    transform: scale(1.1);
   }
   
   .gamehub-unique-game-title {
